@@ -1,75 +1,0 @@
-# Copyright (C) 2012-2013 Zentyal S.L.
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License, version 2, as
-# published by the Free Software Foundation.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-
-# Class: EBox::SysInfo::Model::Password
-#
-#   This model is used to configure the administrator password
-#
-
-use strict;
-use warnings;
-
-package EBox::SysInfo::Model::Password;
-
-use TryCatch::Lite;
-
-use EBox::Gettext;
-
-use base 'EBox::Model::DataForm';
-
-sub new
-{
-    my $class = shift;
-
-    my $self = $class->SUPER::new(@_);
-    bless ($self, $class);
-
-    return $self;
-}
-
-sub _table
-{
-    my ($self) = @_;
-
-    my @tableHead = (new EBox::Types::Text( fieldName     => 'password',
-                                            printableName => __('Administrator password'),
-                                            editable      => 1));
-
-    my $dataTable =
-    {
-        'tableName' => 'Password',
-        'printableTableName' => __('Administrator password'),
-        'modelDomain' => 'SysInfo',
-        'defaultActions' => [ 'editField' ],
-        'tableDescription' => \@tableHead,
-        'help' => __('On this page you can set different general system settings'),
-    };
-
-    return $dataTable;
-}
-
-# Method: formSubmitted
-#
-# Overrides:
-#
-#   <EBox::Model::DataForm::formSubmitted>
-#
-sub formSubmitted
-{
-    my ($self) = @_;
-
-}
-
-1;
